rust/libyrs.h


typedef struct YDoc {} YDoc;
typedef struct Branch {} Branch;
typedef struct LinkSource {} LinkSource;
typedef YDoc YDoc;
typedef Branch Branch;
typedef union YOutputContent {
  uint8_t flag;
  double num;
  int64_t integer;
  char *str;
  const char *buf;
  struct YOutput *array;
  struct YMapEntry *map;
  Branch *y_type;
  YDoc *y_doc;
} YOutputContent;
typedef struct YOutput {
  int8_t tag;
  uint32_t len;
  union YOutputContent value;
} YOutput;
typedef struct YMapEntry {
  const char *key;
  const struct YOutput *value;
} YMapEntry;
typedef LinkSource Weak;
typedef union YInputContent {
  uint8_t flag;
  double num;
  int64_t integer;
  char *str;
  char *buf;
  struct YInput *values;
  struct YMapInputData map;
  YDoc *doc;
  const Weak *weak;
} YInputContent;
typedef struct YInput {
  int8_t tag;
  uint32_t len;
  union YInputContent value;
} YInput;
void youtput_destroy(struct YOutput *val);
struct YInput yinput_bool(uint8_t flag);
struct YInput yinput_float(double num);
struct YInput yinput_long(int64_t integer);
struct YInput yinput_string(const char *str);
struct YInput yinput_json(const char *str);
struct YInput yinput_binary(const char *buf, uint32_t len);
struct YInput yinput_json_array(struct YInput *values, uint32_t len);
struct YInput yinput_json_map(char **keys, struct YInput *values, uint32_t len);
struct YInput yinput_yarray(struct YInput *values, uint32_t len);
struct YInput yinput_ymap(char **keys, struct YInput *values, uint32_t len);
struct YInput yinput_ytext(char *str);
struct YInput yinput_yxmlelem(char *name);
struct YInput yinput_yxmltext(char *str);
struct YInput yinput_ydoc(YDoc *doc);
struct YInput yinput_weak(const Weak *weak);
YDoc *youtput_read_ydoc(const struct YOutput *val);
const uint8_t *youtput_read_bool(const struct YOutput *val);
const double *youtput_read_float(const struct YOutput *val);
const int64_t *youtput_read_long(const struct YOutput *val);
char *youtput_read_string(const struct YOutput *val);
const char *youtput_read_binary(const struct YOutput *val);
struct YOutput *youtput_read_json_array(const struct YOutput *val);
struct YMapEntry *youtput_read_json_map(const struct YOutput *val);
Branch *youtput_read_yarray(const struct YOutput *val);