lib/y_dart/ffi/y_dart_bindings_generated.dart


/// Function constructor used to create JSON-like boolean `YInput` cell.
/// This function doesn't allocate any heap resources.
@ffi.Native<YInput Function(ffi.Uint8)>(
    symbol: 'yinput_bool', assetId: 'package:y_dart/y_dart')
external YInput yinput_bool(
  int flag,
);

/// Function constructor used to create JSON-like 64-bit floating point number `YInput` cell.
/// This function doesn't allocate any heap resources.
@ffi.Native<YInput Function(ffi.Double)>(
    symbol: 'yinput_float', assetId: 'package:y_dart/y_dart')
external YInput yinput_float(
  double num,
);

/// Function constructor used to create JSON-like 64-bit signed integer `YInput` cell.
/// This function doesn't allocate any heap resources.
@ffi.Native<YInput Function(ffi.Int64)>(
    symbol: 'yinput_long', assetId: 'package:y_dart/y_dart')
external YInput yinput_long(
  int integer,
);

/// Function constructor used to create a string `YInput` cell. Provided parameter must be
/// a null-terminated UTF-8 encoded string. This function doesn't allocate any heap resources,
/// and doesn't release any on its own, therefore its up to a caller to free resources once
/// a structure is no longer needed.
@ffi.Native<YInput Function(ffi.Pointer<ffi.Char>)>(
    symbol: 'yinput_string', assetId: 'package:y_dart/y_dart')
external YInput yinput_string(
  ffi.Pointer<ffi.Char> str,
);

/// Function constructor used to create aa `YInput` cell representing any JSON-like object.
/// Provided parameter must be a null-terminated UTF-8 encoded JSON string.
///
/// This function doesn't allocate any heap resources and doesn't release any on its own, therefore
/// its up to a caller to free resources once a structure is no longer needed.
@ffi.Native<YInput Function(ffi.Pointer<ffi.Char>)>(
    symbol: 'yinput_json', assetId: 'package:y_dart/y_dart')
external YInput yinput_json(
  ffi.Pointer<ffi.Char> str,
);

/// Function constructor used to create a binary `YInput` cell of a specified length.
/// This function doesn't allocate any heap resources and doesn't release any on its own, therefore
/// its up to a caller to free resources once a structure is no longer needed.
@ffi.Native<YInput Function(ffi.Pointer<ffi.Char>, ffi.Uint32)>(
    symbol: 'yinput_binary', assetId: 'package:y_dart/y_dart')
external YInput yinput_binary(
  ffi.Pointer<ffi.Char> buf,
  int len,
);

/// Function constructor used to create a JSON-like array `YInput` cell of other JSON-like values of
/// a given length. This function doesn't allocate any heap resources and doesn't release any on its
/// own, therefore its up to a caller to free resources once a structure is no longer needed.
@ffi.Native<YInput Function(ffi.Pointer<YInput>, ffi.Uint32)>(
    symbol: 'yinput_json_array', assetId: 'package:y_dart/y_dart')
external YInput yinput_json_array(
  ffi.Pointer<YInput> values,
  int len,
);

/// Function constructor used to create a JSON-like map `YInput` cell of other JSON-like key-value
/// pairs. These pairs are build from corresponding indexes of `keys` and `values`, which must have
/// the same specified length.
///
/// This function doesn't allocate any heap resources and doesn't release any on its own, therefore
/// its up to a caller to free resources once a structure is no longer needed.
@ffi.Native<
        YInput Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<YInput>,
            ffi.Uint32)>(
    symbol: 'yinput_json_map', assetId: 'package:y_dart/y_dart')
external YInput yinput_json_map(
  ffi.Pointer<ffi.Pointer<ffi.Char>> keys,
  ffi.Pointer<YInput> values,
  int len,
);

/// Function constructor used to create a nested `YArray` `YInput` cell prefilled with other
/// values of a given length. This function doesn't allocate any heap resources and doesn't release
/// any on its own, therefore its up to a caller to free resources once a structure is no longer
/// needed.
@ffi.Native<YInput Function(ffi.Pointer<YInput>, ffi.Uint32)>(
    symbol: 'yinput_yarray', assetId: 'package:y_dart/y_dart')
external YInput yinput_yarray(
  ffi.Pointer<YInput> values,
  int len,
);

/// Function constructor used to create a nested `YMap` `YInput` cell prefilled with other key-value
/// pairs. These pairs are build from corresponding indexes of `keys` and `values`, which must have
/// the same specified length.
///
/// This function doesn't allocate any heap resources and doesn't release any on its own, therefore
/// its up to a caller to free resources once a structure is no longer needed.
@ffi.Native<
    YInput Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<YInput>,
        ffi.Uint32)>(symbol: 'yinput_ymap', assetId: 'package:y_dart/y_dart')
external YInput yinput_ymap(
  ffi.Pointer<ffi.Pointer<ffi.Char>> keys,
  ffi.Pointer<YInput> values,
  int len,
);

/// Function constructor used to create a nested `YText` `YInput` cell prefilled with a specified
/// string, which must be a null-terminated UTF-8 character pointer.
///
/// This function doesn't allocate any heap resources and doesn't release any on its own, therefore
/// its up to a caller to free resources once a structure is no longer needed.
@ffi.Native<YInput Function(ffi.Pointer<ffi.Char>)>(
    symbol: 'yinput_ytext', assetId: 'package:y_dart/y_dart')
external YInput yinput_ytext(
  ffi.Pointer<ffi.Char> str,
);

/// Function constructor used to create a nested `YXmlElement` `YInput` cell with a specified
/// tag name, which must be a null-terminated UTF-8 character pointer.
///
/// This function doesn't allocate any heap resources and doesn't release any on its own, therefore
/// its up to a caller to free resources once a structure is no longer needed.
@ffi.Native<YInput Function(ffi.Pointer<ffi.Char>)>(
    symbol: 'yinput_yxmlelem', assetId: 'package:y_dart/y_dart')
external YInput yinput_yxmlelem(
  ffi.Pointer<ffi.Char> name,
);

/// Function constructor used to create a nested `YXmlText` `YInput` cell prefilled with a specified
/// string, which must be a null-terminated UTF-8 character pointer.
///
/// This function doesn't allocate any heap resources and doesn't release any on its own, therefore
/// its up to a caller to free resources once a structure is no longer needed.
@ffi.Native<YInput Function(ffi.Pointer<ffi.Char>)>(
    symbol: 'yinput_yxmltext', assetId: 'package:y_dart/y_dart')
external YInput yinput_yxmltext(
  ffi.Pointer<ffi.Char> str,
);

/// Function constructor used to create a nested `YDoc` `YInput` cell.
///
/// This function doesn't allocate any heap resources and doesn't release any on its own, therefore
/// its up to a caller to free resources once a structure is no longer needed.
@ffi.Native<YInput Function(ffi.Pointer<YDoc>)>(
    symbol: 'yinput_ydoc', assetId: 'package:y_dart/y_dart')
external YInput yinput_ydoc(
  ffi.Pointer<YDoc> doc,
);

/// Function constructor used to create a string `YInput` cell with weak reference to another
/// element(s) living inside of the same document.
@ffi.Native<YInput Function(ffi.Pointer<Weak>)>(
    symbol: 'yinput_weak', assetId: 'package:y_dart/y_dart')
external YInput yinput_weak(
  ffi.Pointer<Weak> weak,
);

/// Attempts to read the value for a given `YOutput` pointer as a `YDocRef` reference to a nested
/// document.
@ffi.Native<ffi.Pointer<YDoc> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_ydoc', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YDoc> youtput_read_ydoc(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as a boolean flag, which can be either
/// `1` for truthy case and `0` otherwise. Returns a null pointer in case when a value stored under
/// current `YOutput` cell is not of a boolean type.
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_bool', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Uint8> youtput_read_bool(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as a 64-bit floating point number.
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not a floating point number.
@ffi.Native<ffi.Pointer<ffi.Double> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_float', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Double> youtput_read_float(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as a 64-bit signed integer.
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not a signed integer.
@ffi.Native<ffi.Pointer<ffi.Int64> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_long', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Int64> youtput_read_long(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as a null-terminated UTF-8 encoded
/// string.
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not a string. Underlying string is released automatically as part of [youtput_destroy]
/// destructor.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_string', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> youtput_read_string(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as a binary payload (which length is
/// stored within `len` filed of a cell itself).
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not a binary type. Underlying binary is released automatically as part of [youtput_destroy]
/// destructor.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_binary', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> youtput_read_binary(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as a JSON-like array of `YOutput`
/// values (which length is stored within `len` filed of a cell itself).
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not a JSON-like array. Underlying heap resources are released automatically as part of
/// [youtput_destroy] destructor.
@ffi.Native<ffi.Pointer<YOutput> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_json_array', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YOutput> youtput_read_json_array(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as a JSON-like map of key-value entries
/// (which length is stored within `len` filed of a cell itself).
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not a JSON-like map. Underlying heap resources are released automatically as part of
/// [youtput_destroy] destructor.
@ffi.Native<ffi.Pointer<YMapEntry> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_json_map', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YMapEntry> youtput_read_json_map(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as an `YArray`.
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not an `YArray`. Underlying heap resources are released automatically as part of
/// [youtput_destroy] destructor.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_yarray', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> youtput_read_yarray(
  ffi.Pointer<YOutput> val,
);
